# zenos

./: .env.example  .firebaserc  .gcloudignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  README.md  firebase.json  firestore.rules  myproj  paceriz-threads-strategy.md  pyproject.toml  threads-engagement-log.md  threads-trend-report.md
.firebase/: hosting.ZGFzaGJvYXJkL291dA.cache
dashboard/: .env.local.example  .gitignore  package-lock.json  package.json  playwright.config.ts  qa-e2e.mjs  qa-local-physics-test.mjs  qa-test.mjs  tsconfig.tsbuildinfo  vitest.config.ts
dev-log/: 2026-03-20-kickoff.md  2026-03-20-marketing-spec.md  README.md
docs/: ADR-014-knowledge-graph-value-validation.md  customers.yml  enterprise-governance.md  glossary.md  market-insights.md  ontology-methodology.md  ontology.md  refactor-index.md  spec.md
migrations/: 20260325_0001_sql_cutover_init.sql  20260327_0002_task_plan_fields.sql  20260328_0003_entity_entries.sql  20260328_0004_entry_lifecycle.sql  20260328_0005_crm_schema.sql  20260329_0006_doc_archived_status.sql  20260330_0007_permission_governance_departments.sql  20260330_0008_task_source_metadata.sql  20260331_0009_task_creator_simplification.sql  20260331_0010_task_status_simplification.sql  20260331_0011_task_updated_by.sql  20260331_0012_task_attachments.sql  20260401_0001_tool_events.sql  20260401_0008_partner_departments_and_entry_department.sql  20260401_0009_usage_logs_feature.sql  20260403_0010_invite_expires_at.sql  20260403_0011_task_comments.sql  20260403_0012_audit_events.sql  20260403_0013_relationship_verb.sql  20260404_0014_work_journal.sql  20260406_0011_partner_access_mode.sql  20260406_0012_partner_access_mode_backfill.sql  20260408_0013_identity_access_visibility_alignment.sql  20260409_0014_governance_health_cache.sql  20260409_0015_document_bundle.sql  20260409_0016_partner_preferences.sql  20260410_0017_plans_table.sql  20260410_0018_auth_federation.sql  20260410_0019_task_blocked_status_cleanup.sql  20260411_0020_document_delivery_layer.sql  20260411_0021_ext_ingestion_tables.sql  20260414_0001_deal_entity_bridge.sql  20260414_0002_crm_settings.sql  20260414_0003_crm_ai_insights.sql  20260416_0021_document_bundle_highlights.sql  20260417_0001_usage_logs_outcome.sql  20260418_0001_pgvector_entity_embedding.sql  20260419_0001_task_action_layer_upgrade.sql  20260419_0002_federation_auto_provisioning.sql  20260420_0001_helper_ingest.sql  (+13 more)
scripts/: backfill_embeddings.py  backfill_entity_level.py  backfill_l3_action_parent_id.py  backfill_task_actor_metadata.py  benchmark_results.json  benchmark_semantic_gate.py  check_github_delivery_secret.py  cleanup_cross_product_related_to.py  cleanup_goal_disconnected_blindspots.py  cleanup_topology_blindspots.sql  create_identity_link.py  deploy.sh  deploy_mcp.sh  fix_admin_shared_partner_ids.py  fix_amy_tasks.py  fix_entity_partner_ids.py  fix_parent_ids.py  fix_sources.py  import_firestore_to_sql.py  inspect_partner_access.py  lint_governance_ssot.py  list_product_entities.py  merge_document_entities.py  migrate.sh  migrate_imports.py  migrate_partner_shared_ids.py  migrate_tasks_to_partner.py  provision_customer.py  purge_ontology.py  qa_governance_ai.py  rebundle_document_entities.py  register_trusted_app.py  reparent_flat_l2_documents.py  run_sql_migrations.py  search_partners.py  seed_partners.py  set_partner_authorized_entities.py  (+5 more)
(+1024 files in other folders)
