[project]
name = "zenos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "fastmcp>=2.0",
    "firebase-admin>=6.0",
    "google-cloud-firestore>=2.19",
    "httpx>=0.27",
    "litellm==1.82.6",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "pytest-asyncio>=0.24,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
