[project]
name = "zenos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29",
    "fastmcp>=2.0",
    "firebase-admin>=6.0",
    "google-cloud-firestore>=2.19",
    "google-cloud-storage>=2.14",
    "httpx>=0.27",
    "litellm==1.82.6",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
]

[project.scripts]
zenos-skills = "zenos.skills_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<10",
    "pytest-asyncio>=0.24,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "spec(id): marketing/spec compliance acceptance criterion",
]

[tool.importlinter]
root_packages = ["zenos"]

# --- Layer isolation ---

[[tool.importlinter.contracts]]
name = "Domain layer has zero external dependencies"
type = "forbidden"
source_modules = ["zenos.domain"]
forbidden_modules = [
    "zenos.application",
    "zenos.infrastructure",
    "zenos.interface",
]

[[tool.importlinter.contracts]]
name = "Application layer does not touch infrastructure or interface"
type = "forbidden"
source_modules = ["zenos.application"]
forbidden_modules = [
    "zenos.infrastructure",
    "zenos.interface",
]

[[tool.importlinter.contracts]]
name = "Infrastructure layer does not know about interface"
type = "forbidden"
source_modules = ["zenos.infrastructure"]
forbidden_modules = ["zenos.interface"]

# --- Domain sub-package direction ---

[[tool.importlinter.contracts]]
name = "Knowledge does not import Action (Knowledge -> Action forbidden)"
type = "forbidden"
source_modules = ["zenos.domain.knowledge"]
forbidden_modules = ["zenos.domain.action"]

[[tool.importlinter.contracts]]
name = "Identity does not know concrete entity or task sub-packages"
type = "forbidden"
source_modules = ["zenos.domain.identity"]
forbidden_modules = [
    "zenos.domain.knowledge",
    "zenos.domain.action",
]

# --- Application sub-package isolation ---

[[tool.importlinter.contracts]]
name = "application.knowledge does not import sibling application services"
type = "forbidden"
source_modules = ["zenos.application.knowledge"]
forbidden_modules = [
    "zenos.application.action",
    "zenos.application.identity",
]

[[tool.importlinter.contracts]]
name = "application.action does not import sibling application services"
type = "forbidden"
source_modules = ["zenos.application.action"]
forbidden_modules = [
    "zenos.application.knowledge",
    "zenos.application.identity",
]

[[tool.importlinter.contracts]]
name = "application.identity does not import sibling application services"
type = "forbidden"
source_modules = ["zenos.application.identity"]
forbidden_modules = [
    "zenos.application.knowledge",
    "zenos.application.action",
]
